--- a/.gitignore
+++ b/.gitignore
@@ -4,13 +4,7 @@
 # Log file
 *.log
 
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
+# Package Files 
 *.jar
 *.war
 *.nar
@@ -19,5 +13,8 @@
 *.tar.gz
 *.rar
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# Backup files
+*.bak
+
+# Gradle cache
+.gradle
